# aguaviva

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  app.py  compose.yaml  hello.py  pyproject.toml  pyqt5.py  rapido.py  requirements.in  requirements.txt  run.py  supervisord.conf
antigo/runs/: README.md
antigo/runs/train/medium_finetuned/: events.out.tfevents.1727008999.4ecd4a3bea75.5419.0  results.csv
antigo/runs/train/nano_finetuned/: args.yaml  events.out.tfevents.1727014922.6c46e0ffd855.11567.0
antigo/runs/train/small_finetuned/: args.yaml  events.out.tfevents.1727012649.6c46e0ffd855.1890.0  results.csv
runs/train/large_finetuned/: args.yaml
runs/train/medium_finetuned/: args.yaml
runs/train/nano_finetuned/: results.csv
runs/train/yolov10l_trained/: args.yaml  events.out.tfevents.1726947740.491284e18250.1403.0  results.csv
templates/: index.html
