[project]
name = "aguaviva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dataset-tools>=0.1.4",
    "opencv-python>=4.10.0.84",
    "pillow>=10.2.0",
    "pyinstaller>=6.10.0",
    "pyqt5>=5.15.11",
    "streamlit-webrtc>=0.47.9",
    "streamlit>=1.40.0",
    "ultralytics==8.3.28",
    "watchdog>=5.0.3",
    "lapx>=0.5.2",
]
